--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,8 @@
         }]
     ],
     "plugins" : [
-        "transform-class-properties"
+        "babel-plugin-transform-class-properties",
+        "babel-plugin-transform-object-rest-spread"
     ],
     "env": {
         "test": {
